# slurm-swiss-knife

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AUTOCOMPLETE.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  a.sh  autocomplete-test.sh  coverage.lcov  mkdocs.yml  pyproject.toml  quick-fix.sh  slurm-cli  slurm-cli.profiles.example  tox.ini
.cursor/rules/: docs-update.mdc
.github/workflows/: ci.yml
docs/: changelog.md  index.md
docs/development/: api.md  contributing.md  mocks.md  testing.md
docs/getting-started/: autocomplete.md  installation.md  quickstart.md
docs/user-guide/: commands.md  filtering.md  profiles.md
docs/user-guide/resources/: accounts.md  associations.md  coordinators.md  jobs.md  nodes.md  partitions.md  qos.md  reservations.md  users.md
man/man1/: slurm-cli.1
mocks/: README.md  accounts.json  nodes.json  partitions  partitions.json  qos.json  reservations.json  sacctmgr  scancel  scontrol  sinfo  squeue  users.json
mocks/data/: accounts  accounts.json  associations.json  events  events.json  jobs.json  nodes  nodes.json  partitions  partitions.json  qos.json  reservations  reservations.json  sinfo  sinfo.json  slurm_config  squeue.json  squeue_active  squeue_all  squeue_extended  users  users.json
src/slurm_cli/: __init__.py  cli.py
src/slurm_cli/utils/: __init__.py  accounts.py  associations.py  autocomplete_helpers.py  base_resource.py  config.py  coordinators.py  events.py  job_filter.py  jobs.py  node_filter.py  nodes.py  partitions.py  prefix_utils.py  profiles.py  qos.py  reservations.py  resources.py  slurm_config.py  users.py  utils.py
tests/: __init__.py  test_accounts.py  test_associations.py  test_base_resource.py  test_burstbuffer_daemons_dwstat_topology.py  test_cancel_reboot.py  test_cli.py  test_cli_extended.py  test_coordinators.py  test_events.py  test_job_filter.py  test_jobs.py  test_node_filter.py  test_nodes.py  test_output_formats.py  test_partitions.py  test_prefix_utils.py  test_profiles.py  test_qos.py  test_reservations.py  test_resources.py  test_setdebugflags.py  test_slurm_config.py  test_users.py  test_write_config.py
utils/: MOCK_USAGE.md  record_slurm_outputs.sh  show_part.py
